# wandb-addons

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Use_WandbMetricLogger_in_your_Keras_workflow_1.ipynb  densenet_training_dict.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: deploy.yml  docs.yml  tests.yml
ciclo/ciclo/: index.html
ciclo/examples/ciclo_MNIST/: index.html
dataset/dataset_loading/: index.html
dataset/dataset_preparation/: dataset_preparation.md  index.html
dataset/examples/load_dataset/: index.html
datatypes/: index.html
diffusers/auto_integrate/: index.html
diffusers/base/: index.html
diffusers/deepfloyd_if/: index.html
diffusers/examples/deepfloyd_if/: index.html
diffusers/examples/kandinsky/: index.html
diffusers/examples/sdxl/: index.html  sdxl.ipynb
diffusers/examples/stable_diffusion/: index.html
diffusers/examples/stable_diffusion_img2img/: index.html  stable_diffusion_img2img.ipynb
diffusers/kandinsky/: index.html  kandinsky.md
diffusers/overview/: index.html
diffusers/stable_diffusion/: index.html
docs/: ciclo.md  datatypes.md  index.md  keras.md  monai.md  utils.md
docs/accessor/examples/: load_monkey_dataset.ipynb
docs/ciclo/examples/: Ciclo_Wandb.ipynb  ciclo_MNIST.ipynb
docs/dataset/: dataset_loading.md  dataset_preparation.md
docs/dataset/examples/: load_dataset.ipynb  load_monkey_dataset.ipynb
docs/datasets/: dataset_loading.md
docs/diffusers/: auto_integrate.md  base.md  deepfloyd_if.md  kandinsky.md  overview.md  stable_diffusion.md  wandb_callbacks.md
docs/diffusers/examples/: deepfloyd_if.ipynb  kandinsky.ipynb  sdxl.ipynb  stable_diffusion.ipynb  stable_diffusion_img2img.ipynb
docs/keras/: keras.md  keras_core.md  object_detection.md
docs/keras/examples/: image_classification.ipynb  object_detection_inference.ipynb  train_retinanet.ipynb  visualize_dataset.ipynb
docs/monai/examples/: densenet_training_dict.ipynb  spleedn_segmentation.ipynb  unet_3d_segmentation.ipynb  unet_spleen_segmentation.ipynb
docs/prompts/: Trace_QuickStart.ipynb  tracer.md
docs/prompts/examples/: Trace_QuickStart.ipynb
docs/ultralytics/: yolo.md
examples/monai/: densenet_training_dict.ipynb  unet_3d_segmentation.ipynb
keras/examples/image_classification/: index.html
keras/examples/object_detection_inference/: index.html  object_detection_inference.ipynb
keras/examples/train_retinanet/: index.html
keras/examples/visualize_dataset/: index.html
keras/keras/: index.html
keras/object_detection/: index.html
monai/examples/densenet_training_dict/: index.html
monai/examples/unet_3d_segmentation/: index.html  unet_3d_segmentation.ipynb
monai/monai/: index.html
prompts/examples/Trace_QuickStart/: index.html
prompts/tracer/: index.html
report/: index.html  report.md
search/: search_index.json
ultralytics/yolo/: index.html
utils/: index.html
wandb_addons/: __init__.py  utils.py
wandb_addons/accessor/: dataset_loading.py  utils.py
wandb_addons/callbacks/keras/: __init__.py  clf_eval_callback.py  gradcam.py
wandb_addons/ciclo/: __init__.py  wandb_log.py
wandb_addons/dataset/: __init__.py  dataset_builder.py  dataset_loading.py  dataset_upload.py  table_creation.py  utils.py
wandb_addons/datasets/: __init__.py  dataset_builder.py
wandb_addons/datasets/tfds/: __init__.py  dataset_builder.py  dataset_loading.py  dataset_upload.py
wandb_addons/datatype/: __init__.py  rgbd.py  segmentation_mask.py  video.py  voxelized_pcd.py
wandb_addons/diffusers/: __init__.py  auto_integrate.py  base.py  kandinsky.py  stable_diffusion.py  stable_diffusion_callback.py  wrapper.py
wandb_addons/diffusers/callbacks/: __init__.py  base.py  deepfloyd_if.py  kandinsky.py  stable_diffusion.py
wandb_addons/keras/: __init__.py  classification_callback.py  image_classification.py  metrics_logger.py  model_checkpoint.py
wandb_addons/keras/detection/: __init__.py  callback.py  dataset.py  inference.py
wandb_addons/monai/: __init__.py  checkpoint_handler.py  image_handler.py  stats_handler.py  utils.py
wandb_addons/prompts/: __init__.py  tracer.py
wandb_addons/report/: __init__.py  notebook_convert.py
wandb_addons/report/cli/: convert.py
wandb_addons/tests/dataset/: test_dataset_loading.py
wandb_addons/tests/keras/: test_callbacks.py  test_metrics_logger.py  test_model_checkpoint.py  test_wandb_metrics_logger.py
wandb_addons/tests/prompts/: test_tracer.py
wandb_addons/ultralytics/: __init__.py  bbox_utils.py  callback.py
wandb_addons/weightwatcher/: __init__.py  logger.py
(+8 files in other folders)
