[tool.poetry]
name = "wandb-addons"
version = "0.1.0"
description = "Weights & Biases Addons is a repository consisting of additional unitilities and community contributions for supercharging your Weights & Biases workflows"
authors = ["Soumik Rakshit <19soumik.rakshit96@gmail.com>"]
readme = "README.md"
packages = [{include = "wandb_addons"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
wandb = "^0.15.2"
click = "^8.1.3"
tqdm = "^4.65.0"
nbformat = "^5.8.0"
isort = "^5.10.1"

[tool.poetry.extras]
dev = ["isort"]