[tool.poetry]
name = "wandb-addons"
version = "0.1.0"
description = "Weights & Biases Addons is a repository consisting of additional unitilities and community contributions for supercharging your Weights & Biases workflows"
authors = ["Soumik Rakshit <19soumik.rakshit96@gmail.com>"]
readme = "README.md"
packages = [{include = "wandb_addons"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
wandb = "^0.15.4"
click = "^8.1.3"
datasets = "^2.13.0"
tqdm = "^4.65.0"
nbformat = "^5.9.0"
poetry = "^1.5.1"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.2"
pre-commit = "^3.3.3"
build = "^0.10.0"
twine = "^4.0.2"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-glightbox = "^0.3.4"
mkdocs-jupyter = "^0.24.1"
tensorflow-datasets = "^4.9.2"
pillow = "^9.5.0"
monai = {extras = ["ignite", "nibabel", "tensorboard"], version = "^1.2.0"}
ciclo = "^0.1.8"
jupyter = "^1.0.0"

[tool.poetry.extras]
dev = ["isort", "black", "pytest", "pre-commit"]
docs = ["mkdocs", "mkdocstrings", "mkdocs-material", "mkdocs-minify-plugin", "mkdocs-glightbox", "mkdocs-jupyter", "jupyter"]
deploy = [ "build", "twine", "mkdocs", "mkdocstrings", "mkdocs-material", "mkdocs-minify-plugin", "mkdocs-glightbox", "mkdocs-jupyter"]
test = ["pytest"]
dataset = ["tensorflow-datasets", "pillow", "datasets"]
monai = ["monai"]
jax = ["ciclo", "tensorflow-datasets"]

[tool.poetry.scripts]
nb2report = "wandb_addons.report.cli.convert:convert"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
