[tool.poetry]
name = "wandb-addons"
version = "0.1.0"
description = "Weights & Biases Addons is a repository consisting of additional unitilities and community contributions for supercharging your Weights & Biases workflows"
authors = ["Soumik Rakshit <19soumik.rakshit96@gmail.com>"]
readme = "README.md"
packages = [{ include = "wandb_addons" }]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
wandb = "^0.15.4"
click = "^8.1.3"
tqdm = "^4.65.0"
nbformat = "^5.9.0"
poetry = "^1.5.1"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.2"
pre-commit = "^3.3.3"
build = "^0.10.0"
twine = "^4.0.2"
mkdocs = "^1.4.3"
mkdocstrings = { extras = ["python"], version = "^0.22.0" }
mkdocs-material = "^9.1.15"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-glightbox = "^0.3.4"
mkdocs-jupyter = "^0.24.1"
tensorflow-datasets = "^4.9.2"
pillow = "^9.5.0"
monai = { extras = ["ignite", "nibabel", "tensorboard"], version = "^1.2.0" }
ciclo = "^0.1.8"
jupyter = "^1.0.0"
ultralytics = "^8.0.125"
keras-core = { version="^0.1.7", python=">=3.9,<3.12" }
keras-cv = {git = "https://github.com/keras-team/keras-cv"}
diffusers = "^0.21.3"
transformers = "^4.33.3"
accelerate = "^0.23.0"
blacken-docs = "^1.16.0"
weave = {version = "^0.28.0", python = ">=3.9,<3.12"}

[tool.poetry.extras]
dev = ["isort", "black", "pytest", "pre-commit", "blacken-docs"]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "jupyter",
]
deploy = [
    "build",
    "twine",
    "mkdocs",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
]
test = ["pytest"]
dataset = ["tensorflow-datasets", "pillow"]
monai = ["monai"]
jax = ["ciclo", "tensorflow-datasets"]
yolo = ["ultralytics"]
keras = ["keras-core", "keras-cv"]
huggingface = ["diffusers", "transformers", "accelerate", "weave"]

[tool.poetry.scripts]
nb2report = "wandb_addons.report.cli.convert:convert"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",
    "E121",
    "E123",
    "E126",
    "E226",
    "E24",
    "E501",
    "E704",
    "W503",
    "W504",
    "N802",
    "N812",
]

[tool.isort]
line_length = 88
known_first_party = ["wandb_addons"]
default_section = "THIRDPARTY"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
